# exaviz-poe-mqtt-bridge

./: .gitignore  INSTALL.md  README.md  config.example.yaml  pyproject.toml
exaviz_poe_mqtt_bridge/: __init__.py  commands.py  config.py  daemon.py  discovery.py  mqtt.py  poe.py  vendor_db.py  web.py
exaviz_poe_mqtt_bridge/static/: index.html
scripts/: deploy.sh
systemd/: exaviz-poe-mqtt-bridge.service
tests/: test_commands.py  test_config.py  test_daemon.py  test_discovery.py  test_switch_mode.py  test_web.py
